# ant_search_algorithm

./: .gitignore  LICENSE  README.md  REQUIREMENTS.txt  pyproject.toml
.github/workflows/: main.yml
devs/docs/: algorithms.md  architecture.md  code diagram.drawio
examples/example_01/: statistics.json  statistics.tex
examples/example_02/: statistics.json  statistics.tex
examples/example_03/: statistics.json  statistics.tex
resources/: ant.py  colony.py  config.py  food.py  gui.py  gui_config.py  init.py  obstacle.py  pheromone.py  simulation.py  timer_decorator.py  world.py
statistics/: statistics.py
test/: __init__.py  test_ant.py  test_colony.py  test_food.py  test_gui.py  test_pheromone.py  test_simulation.py  test_world.py
